Fixing CI pipeline.